--- a/IFreePlay/ifreeplaylogin/build.gradle
+++ b/IFreePlay/ifreeplaylogin/build.gradle
@@ -32,9 +32,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile files('libs/wechat-sdk-android-with-mta-1.3.4.jar')
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
     //compile(name: 'line-sdk-4.0.5', ext: 'aar')
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
