--- a/IFreePlay/ifreeplaylogin/build.gradle
+++ b/IFreePlay/ifreeplaylogin/build.gradle
@@ -33,7 +33,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/wechat-sdk-android-with-mta-1.3.4.jar')
-    //compile(name: 'line-sdk-4.0.5', ext: 'aar')
+    compile(name: 'line-sdk-4.0.5', ext: 'aar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
