--- a/IFreePlay/app/build.gradle
+++ b/IFreePlay/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    //compile(name: 'line-sdk-4.0.5', ext: 'aar')
+    compile(name: 'line-sdk-4.0.5', ext: 'aar')
+    compile project(':ifreeplaylogin')
 }
