--- a/IFreePlay/ifreeplaylogin/build.gradle
+++ b/IFreePlay/ifreeplaylogin/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
-// alidili改成你的GitHub账户名
+apply plugin: 'com.jfrog.bintray'
+//apply plugin: 'com.novoda.bintray-release'
 group = 'com.github.Gaowey'
 android {
     compileSdkVersion 25
@@ -11,7 +12,6 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -20,6 +20,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    lintOptions {
+        abortOnError false
     }
 }
 repositories {
@@ -33,10 +37,115 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/wechat-sdk-android-with-mta-1.3.4.jar')
-    //compile(name: 'line-sdk-4.0.5', ext: 'aar')
+    compile(name: 'line-sdk-4.0.5', ext: 'aar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile files('libs/classes.jar')
+    //compile files('libs/classes.jar')
+}
+
+
+
+/*publish {
+    userOrg = 'gaowei'      //bintray注册的用户名
+    groupId = 'com.ifreeplay'         //compile引用时的第1部分groupId
+    artifactId = 'IFreePlay'     //compile引用时的第2部分项目名
+    publishVersion = '1.0.0'    //compile引用时的第3部分版本号
+    desc = 'This is a library of integrated third party logins'
+    website = 'https://github.com/Gaowey/IFreePlay'
+}*/
+
+
+
+//项目主页
+def siteUrl = 'https://github.com/Gaowey/IFreePlay'    // project homepage
+//项目的版本控制地址
+def gitUrl = 'https://github.com/Gaowey/IFreePlay.git' // project git
+
+//发布到组织名称名字，必须填写
+group = "com.ifreeplay"
+//发布到JCenter上的项目名字，必须填写
+def libName = "IFreePlay"
+// 版本号，下次更新是只需要更改版本号即可
+version = "1.0.0"
+//生成源文件
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+//生成文档
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    options.encoding "UTF-8"
+    options.charSet 'UTF-8'
+    options.author true
+    options.version true
+    options.links "https://github.com/Gaowey/IFreePlay/new/master?readme=1"
+    failOnError false
+}
+//文档打包成jar
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+//拷贝javadoc文件
+task copyDoc(type: Copy) {
+    from "${buildDir}/docs/"
+    into "docs"
+}
+//上传到jcenter所需要的源码文件
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+// 配置maven库，生成POM.xml文件
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+                name 'This is a library of integrated third party logins'
+                url siteUrl
+                licenses {
+                    license {
+                        name 'This is a library of integrated third party logins'
+                        url 'https://github.com/Gaowey/IFreePlay'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'gaowei'
+                        name 'Gaowey'
+                        email 'gaowei@ifreeplay.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+
+//上传到jcenter
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+bintray {
+    user = properties.getProperty("bintray.user")    //读取 local.properties 文件里面的 bintray.user
+    key = properties.getProperty("bintray.apikey")   //读取 local.properties 文件里面的 bintray.apikey
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = libName    //发布到JCenter上的项目名字，必须填写
+        desc = 'This is a library of integrated third party logins'    //项目描述
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
 }
