--- a/IFreePlay/ifreeplaylogin/build.gradle
+++ b/IFreePlay/ifreeplaylogin/build.gradle
@@ -37,12 +37,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/wechat-sdk-android-with-mta-1.3.4.jar')
-    compile(name: 'line-sdk-4.0.5', ext: 'aar')
+    //compile(name: 'line-sdk-4.0.5', ext: 'aar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    //compile files('libs/classes.jar')
+    compile files('libs/classes.jar')
 }
 
 
@@ -68,7 +68,7 @@ group = "com.ifreeplay"
 //发布到JCenter上的项目名字，必须填写
 def libName = "IFreePlay"
 // 版本号，下次更新是只需要更改版本号即可
-version = "1.0.1"
+version = "1.0.2"
 //生成源文件
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
