--- a/IFreePlay/ifreeplaylogin/build.gradle
+++ b/IFreePlay/ifreeplaylogin/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-//apply plugin: 'com.novoda.bintray-release'
 group = 'com.github.Gaowey'
 android {
     compileSdkVersion 25
@@ -41,34 +40,23 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile files('libs/classes.jar')
+    compile project(':linesdk405')
+    testCompile 'junit:junit:4.12'
+
 }
-
-
-
-/*publish {
-    userOrg = 'gaowei'      //bintray注册的用户名
-    groupId = 'com.ifreeplay'         //compile引用时的第1部分groupId
-    artifactId = 'IFreePlay'     //compile引用时的第2部分项目名
-    publishVersion = '1.0.0'    //compile引用时的第3部分版本号
-    desc = 'This is a library of integrated third party logins'
-    website = 'https://github.com/Gaowey/IFreePlay'
-}*/
-
 
 
 //项目主页
 def siteUrl = 'https://github.com/Gaowey/IFreePlay'    // project homepage
 //项目的版本控制地址
 def gitUrl = 'https://github.com/Gaowey/IFreePlay.git' // project git
-
 //发布到组织名称名字，必须填写
 group = "com.ifreeplay"
 //发布到JCenter上的项目名字，必须填写
 def libName = "IFreePlay"
 // 版本号，下次更新是只需要更改版本号即可
-version = "1.0.2"
+version = "1.0.3"
 //生成源文件
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
